Samples
	* Fixed the MiniTri10 sample to not use the console subsystem.
	* Changed the sample framework to check for fullscreen DXGI swap chain before disposing.
	* Removed unused testing code from SimpleModel10.

Direct3D9
	* Fixed a memory in Utilities.ReadRange that affected many BaseMesh methods.
	* Fixed a typo in the caps structure that filled VolumeTextureFilterCaps with the wrong value.
	* Fixed memory issue in Include interface.

DXGI
	* Changed SwapChain.Dispose to throw if the adapter is in fullscreen mode. This prevents a crash inside DXGI.
	* Added IsFullScreen property to SwapChain as a convenient alternative to GetFullScreenState.
	* Fixed a null reference check in Output.GetClosestMatchingMode.
	
D3DCompiler
	* Fixed memory issue in Include interface.
	
DirectWrite
	* Changed TextLayout to inherit from TextFormat.
	
DirectInput
	* Fixed a typo in Device.GetObjectInfoById that caused it to return info by usage instead.